BEAUT-979: [BUG-Beautify][iPad, Mobile] Hi, Kourosh and company name are not alignment

--- a/beautify-la/public/content/style.css
+++ b/beautify-la/public/content/style.css
@@ -4533,6 +4533,9 @@ div.placeholder-custom {
   .new-spot.multi-spot .spot-footer .spot-text {
     color: #2c2c2c;
     font-size: 25px; }
+    @media (max-width: 1269px) and (min-width: 980px) {
+      .new-spot.multi-spot .spot-footer .spot-text {
+        font-size: 17px; } }
     @media (max-width: 979px) {
       .new-spot.multi-spot .spot-footer .spot-text {
         text-align: center;
@@ -4555,6 +4558,9 @@ div.placeholder-custom {
     .new-spot.multi-spot .spot-footer .spot-text .color-orange {
       font-size: 29px;
       color: #ff4527; }
+      @media (max-width: 1269px) and (min-width: 980px) {
+        .new-spot.multi-spot .spot-footer .spot-text .color-orange {
+          font-size: 24px; } }
       @media (max-width: 767px) {
         .new-spot.multi-spot .spot-footer .spot-text .color-orange {
           font-size: 16px;
@@ -4578,12 +4584,12 @@ div.placeholder-custom {
           max-height: inherit; } }
   .new-spot.single-ticket-spot .section-ellipsis, .new-spot.single-rsvp-spot .section-ellipsis {
     height: 70px; }
-    @media (max-width: 979px) {
-      .new-spot.single-ticket-spot .section-ellipsis, .new-spot.single-rsvp-spot .section-ellipsis {
-        max-height: inherit; } }
   @media (min-width: 768px) {
     .new-spot.single-ticket-spot .spot-right .spot-footer .btn-orange, .new-spot.single-rsvp-spot .spot-right .spot-footer .btn-orange {
       line-height: 70px; } }
+  @media (min-width: 980px) and (max-width: 1269px) {
+    .new-spot.single-ticket-spot .spot-right .spot-footer .btn-orange, .new-spot.single-rsvp-spot .spot-right .spot-footer .btn-orange {
+      line-height: 51px; } }
   .new-spot.single-special-spot .spot-footer .spot-text, .new-spot.single-ticket-spot .spot-footer .spot-text, .new-spot.single-rsvp-spot .spot-footer .spot-text {
     color: #f3472d;
     font-weight: 700; }
